# GalgameTemplate

./: .gitignore  README.md  pyproject.toml  renpy-sdk-path.example.txt  双击启动预览.bat
docs/: phase-1-scope.md  sync-out-to-render-changelog.md  template-contract.md  vertical-slice.md  目前待解决的.txt  项目程序需求.txt
examples/: minimal.project.toml
scripts/: build_windows.ps1  generate.ps1  lint_with_sdk.ps1  run_with_sdk.ps1
src/galgame_template/: __init__.py  cli.py  constants.py  generator.py  manifest.py  render.py
templates/renpy/game/: 00_bootstrap.rpy.tpl  10_characters.rpy.tpl  20_audio.rpy.tpl  30_transforms.rpy.tpl  40_screens_main_menu.rpy.tpl  41_screens_hud.rpy.tpl  41_screens_say.rpy.tpl  42_screens_save_load.rpy.tpl  43_screens_preferences.rpy.tpl  44_screens_history.rpy.tpl  45_screens_confirm.rpy.tpl  50_script_prologue.rpy.tpl  gui.rpy.tpl  options.rpy.tpl
tests/: test_cli_generate.py  test_generated_tree.py  test_manifest.py  test_sdk_scripts_contract.py  test_ui_contract.py  test_vertical_slice_snapshot.py
