[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "galgame-template"
version = "0.1.0"
description = "Ren'Py-first galgame scaffold generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
galgame-template = "galgame_template.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
